# pybot

./: .gitignore  Procfile  README.md  heroku.md  pyproject.toml  requirements.txt  setup.cfg
pybot/: __init__.py  __main__.py  config.py  data.toml  views.py
pybot/templates/: base.html  index.html  templates
