[tool.poetry]
authors = ["SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
description = "Bot sample"
name = "pybot"
version = "0.1.1"

[tool.poetry.scripts]
pybot = "pybot:main"

[tool.poetry.dependencies]
flask = "^3.0"
gunicorn = "^22.0"
python = "^3.11"
requests = "^2.31"
toml = "^0.10"
wikipedia = "^1.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
